Some tests working.  Converted to using fractions for ContainerVertex positions.